r136 - october, 26, 2009
    * membre : templates > _aclForm.php > fixed missing </a> tag
    * apps/front/app.yml : new setting to use Piwam for only one association
    * association : actions > login > set a new variable 'displayRegisterLink'
    * association : actions > login > redirect to /install if Propel error


r135 - october, 26, 2009
    * install : actions > _isInstallerd() > checks that tables have been created
    * install : templates > indexError.php > error message has been completed    
    
    
r134 - october, 20, 2009
    * Edited wiki page through web user interface.
    
    
r133 - october, 20, 2009 (Grd Scarabe)
    * Création d'une page de réflexion sur la comptabilité
    

r132 - october, 19, 2009
    * /apps/front/lib/helper/WebsiteHelper.php : new helper with function 
      short_website_url to display short URL
    * association : actions > index > display list of enabled associations
    * association : templates > index > display list of enabled associations


r131 - october, 19, 2009
    * MembreForm : configure() > 'unique' error message has been set for the
      'pseudo' field by a sfPropelUniqueValidator 
    

r130 - october, 15, 2009
    * Statut.php : delete() > statut is disabled if there is no longer active
      Membre
    * Statut.php : countActiveMembres() > new method, counting only active
      members 
    * statut : templates > indexSuccess.php > we show active members who belong
      to the Statut


r129 - october, 15, 2009
    * membre : actions > executeMap > fixes issue with Google Map API key (old
      name was used)
    

r128 - october, 15, 2009
    * Fixes issue #7 : missing ALT attirbut for images


r127 - october, 15, 2009
    * membre : actions > executeMap > Google Map API key is directly given to
      the view
      

r126 - october, 15, 2009
    * membre : actions > executeMap() > associationId is given to the view
    * membre : templates > mapSuccess.php > get the API key for the current 